<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryHighlight">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <TextView
            style="?textSizeMedium"
            android:id="@+id/year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/year_text"
            android:gravity="end"
            android:minHeight="48dp" />

        <TextView
            style="?textSizeSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_text" />

        <TextView
            style="?textSizeMedium"
            android:id="@+id/month_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/month_text"
            android:gravity="end"
            android:minHeight="48dp" />

        <TextView
            style="?textSizeSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_text" />

        <TextView
            style="?textSizeMedium"
            android:id="@+id/day_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/day_text"
            android:gravity="end"
            android:minHeight="48dp" />

        <TextView
            style="?textSizeSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_text" />

    </LinearLayout>

    <TextView
        style="?textSizeMedium"
        android:layout_marginTop="80dp"
        android:id="@+id/entry_content_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|top"
        android:background="@android:color/transparent" />

</FrameLayout>