<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <androidx.fragment.app.FragmentContainerView
            android:padding="40dp"
            android:clickable="false"
            android:id="@+id/see_entry_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="15"
            tools:ignore="UselessParent">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/settings_button_margin"
                android:layout_marginRight="@dimen/settings_button_margin"
                app:mrl_rippleColor="#88FFFFFF"
                app:mrl_rippleOverlay="true">

                <ImageButton
                    android:id="@+id/settings_button"
                    android:layout_width="@dimen/nav_button_size"
                    android:layout_height="@dimen/nav_button_size"
                    android:background="@drawable/nav_button"
                    android:contentDescription="@string/settings_button"
                    android:src="@drawable/baseline_settings_24"
                    tools:ignore="RedundantDescriptionCheck" />

            </com.balysv.materialripple.MaterialRippleLayout>


            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleColor="#88FFFFFF"
                app:mrl_rippleOverlay="true">

                <ImageButton
                    android:id="@+id/calendar_button"
                    android:layout_width="@dimen/nav_button_size"
                    android:layout_height="@dimen/nav_button_size"
                    android:background="@drawable/nav_button"
                    android:contentDescription="@string/calendar_button"
                    android:src="@drawable/baseline_calendar_month_24"
                    tools:ignore="RedundantDescriptionCheck" />

            </com.balysv.materialripple.MaterialRippleLayout>


            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_button_margin"
                android:layout_marginLeft="@dimen/settings_button_margin"
                app:mrl_rippleColor="#88FFFFFF"
                app:mrl_rippleOverlay="true">

                <ImageButton
                    android:id="@+id/new_button"
                    android:layout_width="@dimen/nav_button_size"
                    android:layout_height="@dimen/nav_button_size"
                    android:background="@drawable/nav_button"
                    android:contentDescription="@string/new_button"
                    android:src="@drawable/baseline_add_24"
                    tools:ignore="RedundantDescriptionCheck" />

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>